@@ -1,0 +1,2 @@
+drop table tstsrcpart;
+show locks tstsrcpart extended;
