@@ -1,0 +1,8 @@
+PREHOOK: query: drop table tstsrcpart
+PREHOOK: type: DROPTABLE
+POSTHOOK: query: drop table tstsrcpart
+POSTHOOK: type: DROPTABLE
+PREHOOK: query: show locks tstsrcpart extended
+PREHOOK: type: SHOWLOCKS
+FAILED: Error in metadata: org.apache.hadoop.hive.ql.metadata.InvalidTableException: Table not found 
+FAILED: Execution Error, return code 1 from org.apache.hadoop.hive.ql.exec.DDLTask
